--- a/SchulCloud.Server/Components/Modals/PasswordChangeModal.razor
+++ b/SchulCloud.Server/Components/Modals/PasswordChangeModal.razor
@@ -8,13 +8,13 @@
 
 @implements IAsyncDisposable
 
-@inject IStringLocalizer<PasswordChangeModal> _localizer
-@inject IPasswordValidator<User> _passwordValidator
-@inject UserManager<User> _userManager
-@inject IdentityErrorDescriber _errorDescriber
-@inject ToastService _toastService
+@inject IStringLocalizer<PasswordChangeModal> Localizer
+@inject IPasswordValidator<User> PasswordValidator
+@inject UserManager<User> UserManager
+@inject IdentityErrorDescriber ErrorDescriber
+@inject ToastService ToastService
 
-<Modal @ref="Modal" Title="@_localizer["modalTitle"]" HeaderCssClass="bg-body text-light-emphasis" ShowCloseButton="false" UseStaticBackdrop>
+<Modal @ref="Modal" Title="@Localizer["modalTitle"]" HeaderCssClass="bg-body text-light-emphasis" ShowCloseButton="false" UseStaticBackdrop>
     <BodyTemplate>
         <EditForm EditContext="_editContext">
             <div class="input-group has-validation mb-3">
@@ -23,7 +23,7 @@
                         string inputType = _passwordVisible ? "text" : "password";
                     }
                     <input type="@inputType" class="form-control rounded-end-0@(IsInvalid(nameof(Model.CurrentPassword)))" id="floatingPassword" @bind="Model.CurrentPassword" placeholder="password" autocomplete="current-password" required />
-                    <label for="floatingPassword">@_localizer["currentPassword_Placeholder"]</label>
+                    <label for="floatingPassword">@Localizer["currentPassword_Placeholder"]</label>
                 </div>
 
                 <span class="input-group-text p-0">
@@ -44,7 +44,7 @@
                         string newPwdInputType = _newPasswordVisible ? "text" : "password";
                     }
                     <input type="@newPwdInputType" class="form-control rounded-end-0@(IsInvalid(nameof(Model.NewPassword)))" id="floatingPassword" @bind="Model.NewPassword" placeholder="newPassword" autocomplete="new-password" required />
-                    <label for="floatingPassword">@_localizer["newPassword_Placeholder"]</label>
+                    <label for="floatingPassword">@Localizer["newPassword_Placeholder"]</label>
                 </div>
 
                 <span class="input-group-text p-0">
@@ -65,7 +65,7 @@
                         string confirmedPwdInputType = _confirmedPasswordVisible ? "text" : "password";
                     }
                     <input type="@confirmedPwdInputType" class="form-control rounded-end-0@(IsInvalid(nameof(Model.ConfirmedPassword)))" id="floatingPassword" @bind="Model.ConfirmedPassword" placeholder="newPassword" autocomplete="confirmed-password" required />
-                    <label for="floatingPassword">@_localizer["confirmedPassword_Placeholder"]</label>
+                    <label for="floatingPassword">@Localizer["confirmedPassword_Placeholder"]</label>
                 </div>
 
                 <span class="input-group-text p-0">
@@ -82,8 +82,8 @@
         </EditForm>
     </BodyTemplate>
     <FooterTemplate>
-        <Button Color="ButtonColor.Secondary" @onclick="CloseModal_ClickAsync">@_localizer["abort"]</Button>
-        <Button Color="ButtonColor.Primary" @onclick="ChangePassword_ClickAsync">@_localizer["submit"]</Button>
+        <Button Color="ButtonColor.Secondary" @onclick="CloseModal_ClickAsync">@Localizer["abort"]</Button>
+        <Button Color="ButtonColor.Primary" @onclick="ChangePassword_ClickAsync">@Localizer["submit"]</Button>
     </FooterTemplate>
 </Modal>
 
@@ -117,22 +117,22 @@
     protected override async Task OnInitializedAsync()
     {
         AuthenticationState state = await AuthenticationState.ConfigureAwait(false);
-        _user = (await _userManager.GetUserAsync(state.User).ConfigureAwait(false))!;
+        _user = (await UserManager.GetUserAsync(state.User).ConfigureAwait(false))!;
     }
 
     private async void OnValidationRequest(object? sender, ValidationRequestedEventArgs e)
     {
         _messageStore.Clear();
 
-        if (!await _userManager.CheckPasswordAsync(_user, Model.CurrentPassword).ConfigureAwait(false))
+        if (!await UserManager.CheckPasswordAsync(_user, Model.CurrentPassword).ConfigureAwait(false))
         {
             FieldIdentifier identifier = _editContext.Field(nameof(Model.CurrentPassword));
-            _messageStore.Add(identifier, _errorDescriber.PasswordMismatch().Description);
+            _messageStore.Add(identifier, ErrorDescriber.PasswordMismatch().Description);
 
             goto validationEnd;
         }
 
-        IdentityResult newPwdResult = await _passwordValidator.ValidateAsync(_userManager, _user, Model.NewPassword).ConfigureAwait(false);
+        IdentityResult newPwdResult = await PasswordValidator.ValidateAsync(UserManager, _user, Model.NewPassword).ConfigureAwait(false);
         if (!newPwdResult.Succeeded)
         {
             FieldIdentifier identifier = _editContext.Field(nameof(Model.NewPassword));
@@ -147,7 +147,7 @@
         if (!Model.ConfirmedPassword.Equals(Model.NewPassword))
         {
             FieldIdentifier identifier = _editContext.Field(nameof(Model.ConfirmedPassword));
-            _messageStore.Add(identifier, _localizer["confirmedPassword_DoesNotMatch"]);
+            _messageStore.Add(identifier, Localizer["confirmedPassword_DoesNotMatch"]);
         }
 
         validationEnd:
@@ -174,17 +174,17 @@
     {
         if (_editContext.Validate())
         {
-            IdentityResult result = await _userManager.ChangePasswordAsync(_user, Model.CurrentPassword, Model.NewPassword).ConfigureAwait(true);     // The original context is required here because the ToastService needs a synchronized context.
+            IdentityResult result = await UserManager.ChangePasswordAsync(_user, Model.CurrentPassword, Model.NewPassword).ConfigureAwait(true);     // The original context is required here because the ToastService needs a synchronized context.
             if (result.Succeeded)
             {
                 Model = new();
 
-                _toastService.NotifySuccess(_localizer["successToast_Title"], _localizer["successToast_Message"]);
+                ToastService.NotifySuccess(Localizer["successToast_Title"], Localizer["successToast_Message"]);
                 await Modal.HideAsync().ConfigureAwait(false);
             }
             else
             {
-                _toastService.NotifyError(result.Errors, _localizer["errorToast_Title"]);
+                ToastService.NotifyError(result.Errors, Localizer["errorToast_Title"]);
             }
         }
     }
