--- a/SchulCloud.Server/Components/Pages/Account/Index.razor
+++ b/SchulCloud.Server/Components/Pages/Account/Index.razor
@@ -6,9 +6,9 @@
 
 @attribute [Authorize]
 
-@inject IStringLocalizer<Index> _localizer
+@inject IStringLocalizer<Index> Localizer
 
-<SchulCloudPageTitle Title="@_localizer["title"]" />
+<SchulCloudPageTitle Title="@Localizer["title"]" />
 
 @code {
 
