--- a/SchulCloud.Server/Components/Pages/Account/Security.razor
+++ b/SchulCloud.Server/Components/Pages/Account/Security.razor
@@ -13,18 +13,18 @@
 
 @attribute [Authorize]
 
-@inject IStringLocalizer<Security> _localizer
-@inject IOptions<PasswordOptions> _passwdOptions
-@inject IdentityErrorDescriber _errorDescriber
+@inject IStringLocalizer<Security> Localizer
+@inject IOptions<PasswordOptions> PasswordOptionsAccessor
+@inject IdentityErrorDescriber ErrorDescriber
 
-<SchulCloudPageTitle Title="@_localizer["title"]" />
+<SchulCloudPageTitle Title="@Localizer["title"]" />
 
 <div class="d-flex flex-column mt-3">
-    <h3 class="text-center">@_localizer["tabHeader"]</h3>
+    <h3 class="text-center">@Localizer["tabHeader"]</h3>
 
     <div class="mt-4 mx-3 d-flex flex-column justify-content-center">
         <Tabs Class="justify-content-center" EnableFadeEffect>
-            <Tab Title="@_localizer["tabMethods"]">
+            <Tab Title="@Localizer["tabMethods"]">
                 <Content>
                     <Accordion Class="mt-2" AlwaysOpen>
                         <AccordionItem>
@@ -32,18 +32,18 @@
                                 <div class="d-flex justify-content-between align-items-center flex-fill">
                                     <div class="d-flex align-items-center">
                                         <FontsIcon Name="password" />
-                                        <span class="ms-3">@_localizer["methodPassword"]</span>
+                                        <span class="ms-3">@Localizer["methodPassword"]</span>
                                     </div>
 
                                     @{
                                         DateTimeOffset lastSignIn = DateTimeOffset.Now.AddHours(-1);     @* This value is only a placeholder for the further implementation. *@
                                     }
-                                    <span class="mx-2">@_localizer["method_LastSignIn", lastSignIn.Humanize()]</span>
+                                    <span class="mx-2">@Localizer["method_LastSignIn", lastSignIn.Humanize()]</span>
                                 </div>
                             </TitleTemplate>
                             <Content>
                                 @{
-                                    PasswordOptions options = _passwdOptions.Value;
+                                    PasswordOptions options = PasswordOptionsAccessor.Value;
 
                                     string? ShowWhenTrue(bool condition, Func<IdentityError> errorProvider)
                                     {
@@ -56,24 +56,24 @@
                                     }
                                 }
 
-                                <p>@_localizer["methodPassword_Desc"]</p>
+                                <p>@Localizer["methodPassword_Desc"]</p>
                                 <p class="lh-base">
-                                    @_errorDescriber.PasswordTooShort(options.RequiredLength).Description<br />
-                                    @_errorDescriber.PasswordRequiresUniqueChars(options.RequiredUniqueChars).Description<br />
-                                    @ShowWhenTrue(options.RequireNonAlphanumeric, _errorDescriber.PasswordRequiresNonAlphanumeric)<br />
-                                    @ShowWhenTrue(options.RequireLowercase, _errorDescriber.PasswordRequiresLower)<br />
-                                    @ShowWhenTrue(options.RequireUppercase, _errorDescriber.PasswordRequiresUpper)<br />
-                                    @ShowWhenTrue(options.RequireDigit, _errorDescriber.PasswordRequiresDigit)
+                                    @ErrorDescriber.PasswordTooShort(options.RequiredLength).Description<br />
+                                    @ErrorDescriber.PasswordRequiresUniqueChars(options.RequiredUniqueChars).Description<br />
+                                    @ShowWhenTrue(options.RequireNonAlphanumeric, ErrorDescriber.PasswordRequiresNonAlphanumeric)<br />
+                                    @ShowWhenTrue(options.RequireLowercase, ErrorDescriber.PasswordRequiresLower)<br />
+                                    @ShowWhenTrue(options.RequireUppercase, ErrorDescriber.PasswordRequiresUpper)<br />
+                                    @ShowWhenTrue(options.RequireDigit, ErrorDescriber.PasswordRequiresDigit)
                                 </p>
 
-                                <Button Color="ButtonColor.Primary" @onclick="PasswordChange_ClickAsync">@_localizer["methodPassword_Change"]</Button>
+                                <Button Color="ButtonColor.Primary" @onclick="PasswordChange_ClickAsync">@Localizer["methodPassword_Change"]</Button>
                             </Content>
                         </AccordionItem>
                     </Accordion>
                 </Content>
             </Tab>
 
-            <Tab Title="@_localizer["tabMfa"]">
+            <Tab Title="@Localizer["tabMfa"]">
                 <Content>
                     Mfa
                 </Content>
