--- a/SchulCloud.Server/Components/Routes.razor
+++ b/SchulCloud.Server/Components/Routes.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.Extensions.Options;
-@using SchulCloud.Server.Components.Pages
+@using SchulCloud.Server.Components.Pages.Error
 @using SchulCloud.Server.Options;
 
 <ToastErrorBoundary>
