--- a/SchulCloud.Server/Components/_Imports.razor
+++ b/SchulCloud.Server/Components/_Imports.razor
@@ -9,4 +9,5 @@
 @using SchulCloud.Server
 @using SchulCloud.Client
 @using SchulCloud.Server.Components
+@using SchulCloud.Server.Components.Bootstrap
 @using BlazorBootstrap;
