--- a/SchulCloud.Server/Components/Modals/PasswordChangeModal.razor
+++ b/SchulCloud.Server/Components/Modals/PasswordChangeModal.razor
@@ -17,68 +17,14 @@
 <Modal @ref="Modal" Title="@Localizer["modalTitle"]" HeaderCssClass="bg-body text-light-emphasis" ShowCloseButton="false" UseStaticBackdrop>
     <BodyTemplate>
         <EditForm EditContext="_editContext">
-            <div class="input-group has-validation mb-3">
-                <div class="form-floating@(IsInvalid(nameof(Model.CurrentPassword)))">
-                    @{
-                        string inputType = _passwordVisible ? "text" : "password";
-                    }
-                    <input type="@inputType" class="form-control rounded-end-0@(IsInvalid(nameof(Model.CurrentPassword)))" id="floatingPassword" @bind="Model.CurrentPassword" placeholder="password" autocomplete="current-password" required />
-                    <label for="floatingPassword">@Localizer["currentPassword_Placeholder"]</label>
-                </div>
+            <EditFormValidator For="() => Model.CurrentPassword" ValidateAsync="ValidateCurrentPasswordAsync" />
+            <FloatingPasswordInput OuterClass="mb-3" @bind-Value="Model.CurrentPassword" For="() => Model.CurrentPassword" FloatingLabel="@Localizer["currentPassword_Placeholder"]" Placeholder="password" autocomplete="current-password" required />
 
-                <span class="input-group-text p-0">
-                    <Button Class="d-flex align-items-center" @onclick="@(() => _passwordVisible = !_passwordVisible)">
-                        @{
-                            string iconName = _passwordVisible ? "visibility" : "visibility_off";
-                        }
-                        <FontsIcon Name="@iconName" />
-                    </Button>
-                </span>
+            <EditFormValidator For="() => Model.NewPassword" ValidateAsync="ValidateNewPasswordAsync" />
+            <FloatingPasswordInput OuterClass="mb-3" @bind-Value="Model.NewPassword" For="() => Model.NewPassword" FloatingLabel="@Localizer["newPassword_Placeholder"]" Placeholder="newPassword" autocomplete="new-password" required />
 
-                <ValidationMessage For="() => Model.CurrentPassword" AdditionalAttributes="@(new Dictionary<string, object>(){{"class", "invalid-feedback"}})" />
-            </div>
-
-            <div class="input-group has-validation mb-3">
-                <div class="form-floating@(IsInvalid(nameof(Model.NewPassword)))">
-                    @{
-                        string newPwdInputType = _newPasswordVisible ? "text" : "password";
-                    }
-                    <input type="@newPwdInputType" class="form-control rounded-end-0@(IsInvalid(nameof(Model.NewPassword)))" id="floatingPassword" @bind="Model.NewPassword" placeholder="newPassword" autocomplete="new-password" required />
-                    <label for="floatingPassword">@Localizer["newPassword_Placeholder"]</label>
-                </div>
-
-                <span class="input-group-text p-0">
-                    <Button Class="d-flex align-items-center" @onclick="@(() => _newPasswordVisible = !_newPasswordVisible)">
-                        @{
-                            string iconName = _newPasswordVisible ? "visibility" : "visibility_off";
-                        }
-                        <FontsIcon Name="@iconName" />
-                    </Button>
-                </span>
-
-                <ValidationMessage For="() => Model.NewPassword" AdditionalAttributes="@(new Dictionary<string, object>(){{"class", "invalid-feedback"}})" />
-            </div>
-
-            <div class="input-group has-validation">
-                <div class="form-floating@(IsInvalid(nameof(Model.ConfirmedPassword)))">
-                    @{
-                        string confirmedPwdInputType = _confirmedPasswordVisible ? "text" : "password";
-                    }
-                    <input type="@confirmedPwdInputType" class="form-control rounded-end-0@(IsInvalid(nameof(Model.ConfirmedPassword)))" id="floatingPassword" @bind="Model.ConfirmedPassword" placeholder="newPassword" autocomplete="confirmed-password" required />
-                    <label for="floatingPassword">@Localizer["confirmedPassword_Placeholder"]</label>
-                </div>
-
-                <span class="input-group-text p-0">
-                    <Button Class="d-flex align-items-center" @onclick="@(() => _confirmedPasswordVisible = !_confirmedPasswordVisible)">
-                        @{
-                            string iconName = _confirmedPasswordVisible ? "visibility" : "visibility_off";
-                        }
-                        <FontsIcon Name="@iconName" />
-                    </Button>
-                </span>
-
-                <ValidationMessage For="() => Model.ConfirmedPassword" AdditionalAttributes="@(new Dictionary<string, object>(){{"class", "invalid-feedback"}})" />
-            </div>
+            <EditFormValidator For="() => Model.ConfirmedPassword" ValidateAsync="ValidateConfirmedPasswordAsync" />
+            <FloatingPasswordInput @bind-Value="Model.ConfirmedPassword" For="() => Model.ConfirmedPassword" FloatingLabel="@Localizer["confirmedPassword_Placeholder"]" Placeholder="newPassword" autocomplete="confirmed-password" required />
         </EditForm>
     </BodyTemplate>
     <FooterTemplate>
@@ -88,15 +34,7 @@
 </Modal>
 
 @code {
-    private bool _passwordVisible = false;
-
-    private bool _newPasswordVisible = false;
-
-    private bool _confirmedPasswordVisible = false;
-
     private EditContext _editContext = default!;
-
-    private ValidationMessageStore _messageStore = default!;
 
     private User _user = default!;
 
@@ -110,8 +48,6 @@
     protected override void OnInitialized()
     {
         _editContext = new(Model);
-        _messageStore = new(_editContext);
-        _editContext.OnValidationRequested += OnValidationRequest;
     }
 
     protected override async Task OnInitializedAsync()
@@ -120,49 +56,35 @@
         _user = (await UserManager.GetUserAsync(state.User).ConfigureAwait(false))!;
     }
 
-    private async void OnValidationRequest(object? sender, ValidationRequestedEventArgs e)
+    private async Task<IEnumerable<string>> ValidateCurrentPasswordAsync()
     {
-        _messageStore.Clear();
-
         if (!await UserManager.CheckPasswordAsync(_user, Model.CurrentPassword).ConfigureAwait(false))
         {
-            FieldIdentifier identifier = _editContext.Field(nameof(Model.CurrentPassword));
-            _messageStore.Add(identifier, ErrorDescriber.PasswordMismatch().Description);
-
-            goto validationEnd;
+            return [ErrorDescriber.PasswordMismatch().Description];
         }
 
-        IdentityResult newPwdResult = await PasswordValidator.ValidateAsync(UserManager, _user, Model.NewPassword).ConfigureAwait(false);
-        if (!newPwdResult.Succeeded)
-        {
-            FieldIdentifier identifier = _editContext.Field(nameof(Model.NewPassword));
-            foreach (IdentityError error in newPwdResult.Errors)
-            {
-                _messageStore.Add(identifier, error.Description);
-            }
-
-            goto validationEnd;
-        }
-
-        if (!Model.ConfirmedPassword.Equals(Model.NewPassword))
-        {
-            FieldIdentifier identifier = _editContext.Field(nameof(Model.ConfirmedPassword));
-            _messageStore.Add(identifier, Localizer["confirmedPassword_DoesNotMatch"]);
-        }
-
-        validationEnd:
-        _editContext.NotifyValidationStateChanged();
+        return [];
     }
 
-    private string IsInvalid(string fieldName)
+    private async Task<IEnumerable<string>> ValidateNewPasswordAsync()
     {
-        FieldIdentifier identifier = _editContext.Field(fieldName);
-        if (!_editContext.IsValid(identifier))
+        IdentityResult result = await PasswordValidator.ValidateAsync(UserManager, _user, Model.NewPassword).ConfigureAwait(false);
+        if (!result.Succeeded)
         {
-            return " is-invalid";
+            return result.Errors.Select(err => err.Description);
         }
 
-        return string.Empty;
+        return [];
+    }
+
+    private Task<IEnumerable<string>> ValidateConfirmedPasswordAsync()
+    {
+        if (!Model.NewPassword.Equals(Model.ConfirmedPassword))
+        {
+            return Task.FromResult<IEnumerable<string>>([ Localizer["confirmedPassword_DoesNotMatch"].Value ]);
+        }
+
+        return Task.FromResult<IEnumerable<string>>([]);
     }
 
     private async Task CloseModal_ClickAsync()
@@ -172,20 +94,22 @@
 
     private async Task ChangePassword_ClickAsync()
     {
-        if (_editContext.Validate())
+        if (!_editContext.Validate())
         {
-            IdentityResult result = await UserManager.ChangePasswordAsync(_user, Model.CurrentPassword, Model.NewPassword).ConfigureAwait(true);     // The original context is required here because the ToastService needs a synchronized context.
-            if (result.Succeeded)
-            {
-                Model = new();
+            return;
+        }
 
-                ToastService.NotifySuccess(Localizer["successToast_Title"], Localizer["successToast_Message"]);
-                await Modal.HideAsync().ConfigureAwait(false);
-            }
-            else
-            {
-                ToastService.NotifyError(result.Errors, Localizer["errorToast_Title"]);
-            }
+        IdentityResult result = await UserManager.ChangePasswordAsync(_user, Model.CurrentPassword, Model.NewPassword).ConfigureAwait(true);     // The original context is required here because the ToastService needs a synchronized context.
+        if (result.Succeeded)
+        {
+            Model = new();
+
+            ToastService.NotifySuccess(Localizer["successToast_Title"], Localizer["successToast_Message"]);
+            await Modal.HideAsync().ConfigureAwait(false);
+        }
+        else
+        {
+            ToastService.NotifyError(result.Errors, Localizer["errorToast_Title"]);
         }
     }
 
